--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,13 +1,10 @@
 //
    Created by jiawei.tu on 1/6 0006.
 
-.footer.v2_footer
-   section
-      .col-sm-2
-         a(href="about") profile
-      .col-sm-2
-         a(href="#") wenhua
-      .col-sm-2
-         a(href="#") contact
-      .col-sm-6
-         p &copy; Company 2016
+.footer
+   .copyright
+      .row
+         .col-sm_12
+            <span>Copyright &copy; <a href="http://www.golaravel.com/">Laravel 中文网</a></span> |
+            <span><a href="http://www.miibeian.gov.cn/" target="_blank">京ICP备11008151号</a></span> |
+            <span>京公网安备11010802014853</span>
