--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,17 +7,18 @@ a {
   color: #00B7FF;
 }
 
-.footer {
-  position:relative;
-  padding:20px 0;
-  background:#162f43;
-  color:#999;
-  font-size:13px;
+.copyright {
+  background: #e9e9e9;
+  font-size: 13px;
+  text-align: center;
+  color: #555555;
+  padding-top: 28px;
+  padding-bottom: 28px;
+  border-top: 1px solid #a0a0a0;
 }
-
-.footer a {
-  color:#999;
+.copyright span {
+  margin: 0 .5em;
 }
-.footer a:hover {
-  color:#666;
+.copyright a {
+  color: #555555;
 }
