--- a/views/body.jade
+++ b/views/body.jade
@@ -6,9 +6,10 @@
       h3.text-muted Project name
       nav
          ul.nav.nav-justified
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Downloads</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="projects">Projects</a></li>
+            <li><a href="services">Services</a></li>
+            <li><a href="downloads">Downloads</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="contact">Contact</a></li>
+   script(src="/javascript/body.js")
