--- a/views/index.html
+++ b/views/index.html
@@ -2,12 +2,12 @@
 --><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1"><link href="/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"><link href="/stylesheets/style.css" rel="stylesheet"><link href="/stylesheets/justified-nav.css" rel="stylesheet"><script src="/libs/jquery/dist/jquery.min.js"></script><script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script><link href="/favicon.ico" rel="icon" type="image/ico"><link href="/favicon.ico" rel="shortcut icon" type="image/ico"><title></title></head><body><!--Created by jiawei.tu on 1/6 0006.
---><div class="container"><div class="masthead"><h3 class="text-muted">Project name</h3><nav><ul class="nav nav-justified"><li class="active"><a href="#">Home</a></li>
-<li><a href="#">Projects</a></li>
-<li><a href="#">Services</a></li>
-<li><a href="#">Downloads</a></li>
-<li><a href="#">About</a></li>
-<li><a href="#">Contact</a></li></ul></nav></div></div><div class="jumbotron"><h1>Marketing stuff!</h1><p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+--><div class="container"><div class="masthead"><h3 class="text-muted">Project name</h3><nav><ul class="nav nav-justified"><li class="active"><a href="/">Home</a></li>
+<li><a href="projects">Projects</a></li>
+<li><a href="services">Services</a></li>
+<li><a href="downloads">Downloads</a></li>
+<li><a href="about">About</a></li>
+<li><a href="contact">Contact</a></li></ul></nav></div><script src="/javascript/body.js"></script></div><div class="jumbotron"><h1>Marketing stuff!</h1><p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam.
 Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
 ut fermentum massa justo sit amet.</p><p><a class="btn btn-lg btn-success" href="test" role="button">Get started today</a></p></div><div class="row"><div class="col-lg-4"><h2>Safari bug warning!</h2><p class="text-danger">As of v8.0, Safari exhibits a bug in which resizing your browser horizontally causes
 rendering errors in the justified nav that are cleared upon refreshing.</p><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
@@ -19,4 +19,6 @@ Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><p><a cla
 rendering errors in the justified nav that are cleared upon refreshing.</p><p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
 commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
 Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p><p><a class="btn btn-primary" href="#" role="button">View detail &raquo;</a></p></div></div><!--Created by jiawei.tu on 1/6 0006.
---><div class="footer v2_footer"><section><div class="col-sm-2"><a href="about">profile</a></div><div class="col-sm-2"><a href="#">wenhua</a></div><div class="col-sm-2"><a href="#">contact</a></div><div class="col-sm-6"><p>&copy; Company 2016</p></div></section></div></body></html>
+--><div class="footer"><div class="copyright"><div class="row"><div class="col-sm_12"><span>Copyright &copy; <a href="http://www.golaravel.com/">Laravel 中文网</a></span> |
+<span><a href="http://www.miibeian.gov.cn/" target="_blank">京ICP备11008151号</a></span> |
+<span>京公网安备11010802014853</span></div></div></div></div></body></html>
