--- a/views/body.jade
+++ b/views/body.jade
@@ -3,7 +3,8 @@
 
 .container
    .masthead
-      h3.text-muted Project name
+      a.language(href="#") English
+      h3.text-muted SHANGHAI YUSHUO INDUSTRIES Co., LTD
       nav
          ul.nav.nav-justified
             <li class="active"><a href="/">Home</a></li>
@@ -12,4 +13,5 @@
             <li><a href="downloads">Downloads</a></li>
             <li><a href="about">About</a></li>
             <li><a href="contact">Contact</a></li>
-   script(src="/javascript/body.js")
+
+script(src="/javascripts/body.js")
