--- a/views/index.jade
+++ b/views/index.jade
@@ -2,14 +2,28 @@ extends layout
 
 block content
   .jumbotron
-     h1 Marketing stuff!
-     p.lead.
-       Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-       Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-       ut fermentum massa justo sit amet.
-     <p><a class="btn btn-lg btn-success" href="test" role="button">Get started today</a></p>
 
+    #carousel-blog-generic.carousel.slide(data-ride="carousel")
+      ol.carousel-indicators
+        li.active(data-target="#carousel-blog-generic", data-slide-to="0")
+        li(data-target="#carousel-blog-generic", data-slide-to="1")
+        li(data-target="#carousel-blog-generic", data-slide-to="2")
+      div.carousel-inner(role="listbox")
+        div.item.active
+          img(src="/images/slide1.png", alt="First slide")
+        div.item
+          img(src="/images/slide2.png", alt="Second slide")
+        div.item
+          img(src="/images/slide3.png", alt="Third slide")
+      a.left.carousel-control(href="#carousel-blog-generic", role="button", data-slide="prev")
+        span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
+        span.sr-only Previous
+      a.right.carousel-control(href="#carousel-blog-generic", role="button", data-slide="next")
+        span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
+        span.sr-only Next
   .row
+    .col-lg-12
+      p.slogan 御硕实业,您全球主要港口的专业合作伙伴
     .col-lg-4
       h2 Safari bug warning!
       p.text-danger.
@@ -40,3 +54,4 @@ block content
         commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
         Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
       <p><a class="btn btn-primary" href="#" role="button">View detail &raquo;</a></p>
+  script(src="/javascripts/index.js")
