--- a/views/body.jade
+++ b/views/body.jade
@@ -3,15 +3,34 @@
 
 .container
    .masthead
+      p.activeTab.hidden #{active}
       a.language(href="#") English
-      h3.text-muted SHANGHAI YUSHUO INDUSTRIES Co., LTD
+      h3.text-muted 上海御硕实业有限公司
       nav
          ul.nav.nav-justified
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="projects">Projects</a></li>
-            <li><a href="services">Services</a></li>
-            <li><a href="downloads">Downloads</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="contact">Contact</a></li>
-
+            <li class="active"><a href="/">首页</a></li>
+            <li><a href="aboutUs">关于我们</a></li>
+            <li><a href="showProduct">产品展示</a></li>
+            <li><a href="partners">合作伙伴</a></li>
+            <li><a href="talentStrategy">人才战略</a></li>
+            <li><a href="contactUs">联系我们</a></li>
+.jumbotron
+   #carousel-blog-generic.carousel.slide(data-ride="carousel")
+      ol.carousel-indicators
+         li.active(data-target="#carousel-blog-generic", data-slide-to="0")
+         li(data-target="#carousel-blog-generic", data-slide-to="1")
+         li(data-target="#carousel-blog-generic", data-slide-to="2")
+      div.carousel-inner(role="listbox")
+         div.item.active
+            img(src="/images/slide1.png", alt="First slide")
+         div.item
+            img(src="/images/slide2.png", alt="Second slide")
+         div.item
+            img(src="/images/slide3.png", alt="Third slide")
+      a.left.carousel-control(href="#carousel-blog-generic", role="button", data-slide="prev")
+         span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
+         span.sr-only Previous
+      a.right.carousel-control(href="#carousel-blog-generic", role="button", data-slide="next")
+         span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
+         span.sr-only Next
 script(src="/javascripts/body.js")
