--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,16 @@ p.slogan {
 
 .infoCurrentItem {
   padding-top:0px;
+  float:left;
 }
 p.infoNav {
   padding-top:11px;
+  float:right;
+}
+p.infoNav a {
+  color:#555555;
+}
+
+p.clearBoth {
+  clear:both;
 }
